# stm32f070rb-template

./: Cargo.toml  README.md  memory.x  openocd.cfg
.cargo/: config
